
**  Please also check out our related projects   **
** http://www.joda.org/joda-time/related.html **


Enhancements since 2.7
----------------------
- Encode properties files using unicode escapes [#228]
  The properties files are supposed to be loaded using ISO 8859-1 but Android seems to have issues with that.
  Re-encode the files using unicode escapes to sidestep the issue.


Compatibility with 2.7
----------------------
Build system - Yes

Binary compatible - Yes

Source compatible - Yes

Serialization compatible - Yes

Data compatible - Yes
 - DateTimeZone data updated to version 2015a
 - In the past year, the IANA time-zone database maintainer has changed unique time-zone data for many parts
   of the world into shared "links". For example, in IANA 'Asia/Kuwait' now links to 'Asia/Riyadh'.
   (I personally disagree with the IANA time-zone database maintainer's actions but my objections were ignored).
   This was a problem for Joda-Time as we interpreted the concept of links (many years ago) as only being used
   for backwards compatibility. Links are exposed in Joda-Time, because if you request a time-zone for a linked
   identifier you get the target of the link back. As such, in recent versions of Joda-Time, it was not possible
   to obtain a DateTimeZone with an appropriate identifier for many parts of the world, such as 'Asia/Kuwait'.
   With this release, most links in the main IANA files are now restored to be real zones.
   As a side effect of this, some identifiers that used to act as links are now real zones.
   In summary, in the last Joda-Time release, requesting 'Asia/Kuwait' would have given back 'Asia/Riyadh',
   but it now returns 'Asia/Kuwait' (where 'Asia/Kuwait' and 'Asia/Riyadh' have the same time-zone rules).
   In most cases, this won't have any impact on your application.
 Zones affected (now real zones rather than incorrect links):
 * Africa/Bamako
 * Africa/Banjul
 * Africa/Conakry
 * Africa/Dakar
 * Africa/Freetown
 * Africa/Lome